--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarToggler">
-            <a class="navbar-brand" href="#">BRAND</a>
+            <a class="navbar-brand flex-grow-5" href="#">BRAND</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
