--- a/templates/register.html
+++ b/templates/register.html
@@ -12,12 +12,16 @@
                     {{ form.username(class="form-control", type="text") }}
                 </div>
                 <div class="row p-1">
+                    {{ form.email.label(class="form-label ps-0", text="Email") }}
+                    {{ form.email(class="form-control", type="email") }}
+                </div>
+                <div class="row p-1">
                     {{ form.password.label(class="form-label ps-0", text="Hasło") }}
                     {{ form.password(class="form-control", type="password") }}
                 </div>
                 <div class="row p-1">
-                    {{ form.email.label(class="form-label ps-0", text="Email") }}
-                    {{ form.email(class="form-control", type="email") }}
+                    {{ form.confirmPassword.label(class="form-label ps-0", text="Hasło") }}
+                    {{ form.confirmPassword(class="form-control", type="password") }}
                 </div>
                 <div class="row p-1">
                     <span class="ps-0">Masz już konto? <a href="{{ url_for('login') }}">Zaloguj się!</a></span>
