--- a/templates/login.html
+++ b/templates/login.html
@@ -1,28 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    {% if username %}
-    Hi, {{ username }}!
-    {% else %}
-        <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh">
-            <form method="POST" class="col-sm-5 col-md-4 col-lg-2 col-xl-2 align-items-center">
-                {{ form.hidden_tag() }}
+    <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh">
+        <form method="POST" class="col-sm-5 col-md-4 col-lg-2 col-xl-2 align-items-center">
+            {{ form.hidden_tag() }}
+            <div class="row p-1">
+                {{ form.username.label(class="form-label ps-0", text="Nazwa użytkownika") }}
+                {{ form.username(class="form-control", type="text") }}
+            </div>
+            <div class="row p-1">
+                {{ form.password.label(class="form-label ps-0", text="Hasło") }}
+                {{ form.password(class="form-control", type="password") }}
+            </div>
+            <div class="row p-1">
+                <span class="ps-0">Nie masz konta? <a href="{{ url_for('register') }}">Stwórz je!</a></span>
+            </div>
+            {% if form.errors %}
+                {% for errors in form.errors.values() %}
                 <div class="row p-1">
-                    {{ form.username.label(class="form-label ps-0", text="Nazwa użytkownika") }}
-                    {{ form.username(class="form-control", type="text") }}
+                    {% for error in errors %}
+                        <span class="text-danger text-center">{{ error }}</span>
+                    {% endfor %}
                 </div>
-                <div class="row p-1">
-                    {{ form.password.label(class="form-label ps-0", text="Hasło") }}
-                    {{ form.password(class="form-control", type="password") }}
-                </div>
-                <div class="row p-1">
-                    <span class="ps-0">Nie masz konta? <a href="{{ url_for('register') }}">Stwórz je!</a></span>
-                </div>
-                <div class="row p-1 d-flex justify-content-center">
-                    {{ form.loginSubmit(class="row btn btn-dark m-1 w-50", value="Zaloguj") }}
-                </div>
-            </form>
-        </div>
-    {% endif %}
-
+                {% endfor %}
+            {% endif %}
+            <div class="row p-1 d-flex justify-content-center">
+                {{ form.loginSubmit(class="row btn btn-dark m-1 w-50", value="Zaloguj") }}
+            </div>
+        </form>
+    </div>
 {% endblock %}
