--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,18 +6,24 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
             <a class="navbar-brand flex-grow-5" href="#">BRAND</a>
             <ul class="navbar-nav">
+                {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                 </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="#">Symulacje</a>
                 </li>
+                {% if not current_user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('login')}}">Login</a>
                 </li>
+                {% endif %}
+                {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
