--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
                 </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Symulacje</a>
+                    <a class="nav-link" href="#">About</a>
                 </li>
                 {% if not current_user.is_authenticated %}
                 <li class="nav-item">
